crates/pcb/tests/snapshots/release__case_insensitive_tag.snap
---
source: crates/pcb/tests/release.rs
expression: sb.snapshot_dir(staging_dir)
---
=== diagnostics.json
{
  "boards/CaseBoard.zen": []
}
=== metadata.json
{
  "git": {
    "branch": "main",
    "describe": "v9.9.9",
    "hash": "<GIT_HASH>",
    "remotes": {},
    "workspace": "<TEMP_DIR>/src"
  },
  "release": {
    "board_name": "CaseBoard",
    "created_at": "<TIMESTAMP>",
    "git_version": "v9.9.9",
    "layout_path": "boards/build/CaseBoard",
    "schema_version": "1",
    "source_only": true,
    "staging_directory": "<TEMP_DIR>/src/.pcb/releases/CaseBoard-v9.9.9",
    "workspace_root": "<TEMP_DIR>/src",
    "zen_file": "boards/CaseBoard.zen"
  },
  "system": {
    "arch": "<ARCH>",
    "cli_version": "<CLI_VERSION>",
    "kicad_version": "<KICAD_VERSION>",
    "platform": "<PLATFORM>",
    "user": "<USER>"
  }
}
=== netlist.json
{"instances":{"<TEMP_DIR>/src/.pcb/releases/CaseBoard-v9.9.9/src/boards/CaseBoard.zen:<root>":{"attributes":{"layout_path":{"String":"build/CaseBoard"}},"children":{},"kind":"Module","reference_designator":null,"type_ref":{"module_name":"<root>","source_path":"<TEMP_DIR>/src/.pcb/releases/CaseBoard-v9.9.9/src/boards/CaseBoard.zen"}}},"moved_paths":{},"nets":{"N1":{"id": "<ID>","kind":"Normal","name":"N1","ports":[],"properties":{}},"N2":{"id": "<ID>","kind":"Normal","name":"N2","ports":[],"properties":{}}},"root_ref":"<TEMP_DIR>/src/.pcb/releases/CaseBoard-v9.9.9/src/boards/CaseBoard.zen:<root>","symbols":{}}
=== src/boards/CaseBoard.zen

add_property("layout_path", "build/CaseBoard")

n1 = Net("N1")
n2 = Net("N2")
=== src/boards/pcb.toml

[board]
name = "CaseBoard"
path = "CaseBoard.zen"
=== src/pcb.toml

[workspace]
pcb-version = "0.3"
name = "case_workspace"
