crates/pcb/tests/snapshots/release__case_insensitive_tag_build.snap
---
source: crates/pcb/tests/release.rs
expression: build_ouput
---
Command: pcb build --offline <TEMP_DIR>/src/boards/.pcb/releases/CaseBoard-v9.9.9/src/CaseBoard.zen
Exit Code: 0

--- STDOUT ---

--- STDERR ---
✓ CaseBoard.zen (0 components)
