crates/pcb/tests/snapshots/release__release_basic_build.snap
---
source: crates/pcb/tests/release.rs
expression: build_ouput
---
Command: pcb build <TEMP_DIR>/src/.pcb/releases/TestBoard/unknown/src/boards/TestBoard.zen
Exit Code: 0

--- STDOUT ---

--- STDERR ---
✓ TestBoard.zen (5 components)
