crates/pcb/tests/snapshots/release__release_full_build.snap
---
source: crates/pcb/tests/release.rs
expression: build_ouput
---
Command: pcb build /private/var/folders/ds/0jn6lccn1g331vcm8wgshsgm0000gn/T/.tmpl3HCQ7/src/.pcb/releases/TestBoard/unknown/src/boards/TestBoard.zen
Exit Code: 0

--- STDOUT ---

--- STDERR ---
✓ TestBoard.zen (5 components)
