crates/pcb/tests/snapshots/release__release_with_description.snap
---
source: crates/pcb/tests/release.rs
expression: sb.snapshot_dir(staging_dir)
---
=== diagnostics.json
{
  "boards/DescBoard.zen": []
}
=== metadata.json
{
  "git": {
    "describe": "unknown",
    "hash": "unknown",
    "remotes": {},
    "workspace": "<TEMP_DIR>/src"
  },
  "release": {
    "board_name": "DescBoard",
    "created_at": "<TIMESTAMP>",
    "description": "A test board with a description",
    "git_version": "unknown",
    "layout_path": "boards/build/TestBoard",
    "schema_version": "1",
    "source_only": true,
    "staging_directory": "<TEMP_DIR>/src/.pcb/releases/DescBoard-unknown",
    "workspace_root": "<TEMP_DIR>/src",
    "zen_file": "boards/DescBoard.zen"
  },
  "system": {
    "arch": "<ARCH>",
    "cli_version": "<CLI_VERSION>",
    "kicad_version": "<KICAD_VERSION>",
    "platform": "<PLATFORM>",
    "user": "<USER>"
  }
}
=== src/boards/DescBoard.zen

load("@stdlib/interfaces.zen", "Gpio", "Ground", "Power")

add_property("layout_path", "build/TestBoard")

LedModule = Module("modules/LedModule.zen")
Resistor = Module("@stdlib/generics/Resistor.zen")
Capacitor = Module("@stdlib/generics/Capacitor.zen")

vcc_3v3 = Power("VCC_3V3")
gnd = Ground("GND")
led_ctrl = Gpio("LED_CTRL")

Capacitor(name = "C1", value = "100nF", package = "0402", P1 = vcc_3v3.NET, P2 = gnd.NET)
Capacitor(name = "C2", value = "10uF", package = "0805", P1 = vcc_3v3.NET, P2 = gnd.NET)

LedModule(name = "LED1", led_color = "green", VCC = vcc_3v3, GND = gnd, CTRL = led_ctrl)

Resistor(name = "R1", value = "10kOhm", package = "0603", P1 = vcc_3v3.NET, P2 = led_ctrl.NET)
=== src/boards/modules/LedModule.zen

load("@stdlib/interfaces.zen", "Gpio", "Ground", "Power")

Resistor = Module("@stdlib/generics/Resistor.zen")
Led = Module("@stdlib/generics/Led.zen")

led_color = config("led_color", str, default = "red")
r_value = config("r_value", str, default = "330Ohm")
package = config("package", str, default = "0603")

VCC = io("VCC", Power)
GND = io("GND", Ground)
CTRL = io("CTRL", Gpio)

led_anode = Net("LED_ANODE")

Resistor(name = "R1", value = r_value, package = package, P1 = VCC.NET, P2 = led_anode)
Led(name = "D1", color = led_color, package = package, A = led_anode, K = CTRL.NET)
=== src/boards/pcb.toml

[board]
name = "DescBoard"
path = "DescBoard.zen"
description = "A test board with a description"
=== src/pcb.toml

[workspace]
pcb-version = "0.3"
name = "test_workspace"
