crates/pcb/tests/snapshots/release__release_with_file_build.snap
---
source: crates/pcb/tests/release.rs
expression: build_ouput
---
Command: pcb build --offline <TEMP_DIR>/src/.pcb/releases/TB0002-unknown/src/boards/TB0002.zen
Exit Code: 0

--- STDOUT ---

--- STDERR ---
✓ TB0002.zen (1 components)
