crates/pcb/tests/snapshots/release__release_with_git.snap
---
source: crates/pcb/tests/release.rs
expression: sb.snapshot_dir(staging_dir)
---
=== metadata.json
{
  "git": {
    "describe": "v1.2.3",
    "hash": "<GIT_HASH>",
    "workspace": "<TEMP_DIR>/src"
  },
  "release": {
    "created_at": "<TIMESTAMP>",
    "git_version": "v1.2.3",
    "layout_path": "<TEMP_DIR>/src/boards/build/TestBoard",
    "schema_version": "1",
    "source_only": true,
    "staging_directory": "<TEMP_DIR>/src/.pcb/releases/TB0001-v1.2.3",
    "workspace_root": "<TEMP_DIR>/src",
    "zen_file": "boards/TB0001.zen"
  },
  "system": {
    "arch": "<ARCH>",
    "cli_version": "<CLI_VERSION>",
    "platform": "<PLATFORM>",
    "user": "<USER>"
  }
}
=== src/boards/TB0001.zen

load("@stdlib/interfaces.zen", "Gpio", "Ground", "Power")

add_property("layout_path", "build/TestBoard")

LedModule = Module("../modules/LedModule.zen")
Resistor = Module("@stdlib/generics/Resistor.zen")
Capacitor = Module("@stdlib/generics/Capacitor.zen")

vcc_3v3 = Power("VCC_3V3")
gnd = Ground("GND")
led_ctrl = Gpio("LED_CTRL")

Capacitor(name = "C1", value = "100nF", package = "0402", P1 = vcc_3v3.NET, P2 = gnd.NET)
Capacitor(name = "C2", value = "10uF", package = "0805", P1 = vcc_3v3.NET, P2 = gnd.NET)

LedModule(name = "LED1", led_color = "green", VCC = vcc_3v3, GND = gnd, CTRL = led_ctrl)

Resistor(name = "R1", value = "10kOhm", package = "0603", P1 = vcc_3v3.NET, P2 = led_ctrl.NET)
=== src/boards/pcb.toml

[board]
name = "TB0001"
path = "TB0001.zen"

[packages]
stdlib = "@github/diodeinc/stdlib:v0.2.10"
=== src/modules/LedModule.zen

load("@stdlib/interfaces.zen", "Gpio", "Ground", "Power")

Resistor = Module("@stdlib/generics/Resistor.zen")
Led = Module("@stdlib/generics/Led.zen")

led_color = config("led_color", str, default = "red")
r_value = config("r_value", str, default = "330Ohm")
package = config("package", str, default = "0603")

VCC = io("VCC", Power)
GND = io("GND", Ground)
CTRL = io("CTRL", Gpio)

led_anode = Net("LED_ANODE")

Resistor(name = "R1", value = r_value, package = package, P1 = VCC.NET, P2 = led_anode)
Led(name = "D1", color = led_color, package = package, A = led_anode, K = CTRL.NET)
=== src/pcb.toml

[workspace]
name = "test_workspace"

[packages]
stdlib = "@github/diodeinc/stdlib:v0.2.10"
=== src/vendor/github.com/diodeinc/stdlib/v0.2.10/config.zen <3994 bytes, sha256: 49a58dc>
=== src/vendor/github.com/diodeinc/stdlib/v0.2.10/generics/Capacitor.zen <4106 bytes, sha256: 39c6d8d>
=== src/vendor/github.com/diodeinc/stdlib/v0.2.10/generics/Led.zen <3615 bytes, sha256: 935268a>
=== src/vendor/github.com/diodeinc/stdlib/v0.2.10/generics/Resistor.zen <3268 bytes, sha256: 04bdd43>
=== src/vendor/github.com/diodeinc/stdlib/v0.2.10/interfaces.zen <8527 bytes, sha256: ace862b>
=== src/vendor/github.com/diodeinc/stdlib/v0.2.10/units.zen <9407 bytes, sha256: 099a28c>
=== src/vendor/github.com/diodeinc/stdlib/v0.2.10/utils.zen <533 bytes, sha256: 25e07ab>
=== src/vendor/gitlab.com/kicad/libraries/kicad-footprints/9.0.0/Capacitor_SMD.pretty/C_0402_1005Metric.kicad_mod <3588 bytes, sha256: 3164c1b>
=== src/vendor/gitlab.com/kicad/libraries/kicad-footprints/9.0.0/Capacitor_SMD.pretty/C_0603_1608Metric.kicad_mod <3574 bytes, sha256: bd6bc0e>
=== src/vendor/gitlab.com/kicad/libraries/kicad-footprints/9.0.0/Capacitor_SMD.pretty/C_0805_2012Metric.kicad_mod <3670 bytes, sha256: 41fc23f>
=== src/vendor/gitlab.com/kicad/libraries/kicad-footprints/9.0.0/LED_SMD.pretty/LED_0201_0603Metric.kicad_mod <3957 bytes, sha256: dfc8904>
=== src/vendor/gitlab.com/kicad/libraries/kicad-footprints/9.0.0/LED_SMD.pretty/LED_0603_1608Metric.kicad_mod <3855 bytes, sha256: 16387fe>
=== src/vendor/gitlab.com/kicad/libraries/kicad-footprints/9.0.0/Resistor_SMD.pretty/R_0603_1608Metric.kicad_mod <3607 bytes, sha256: 4704c9c>
=== src/vendor/gitlab.com/kicad/libraries/kicad-symbols/9.0.0/Device.kicad_sym <2213878 bytes, sha256: 972f851>
=== src/vendor/gitlab.com/kicad/libraries/kicad-symbols/9.0.0/power.kicad_sym <165243 bytes, sha256: 541c49b>
