crates/pcb/tests/snapshots/release__release_with_git_build.snap
---
source: crates/pcb/tests/release.rs
expression: build_ouput
---
Command: pcb build <TEMP_DIR>/src/.pcb/releases/TB0001/v1.2.3/src/boards/TB0001.zen
Exit Code: 0

--- STDOUT ---

--- STDERR ---
✓ TB0001.zen (5 components)
